# ultramodern-python

./: .coverage  .flake8  README.md  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: tests.yml
docs/: conf.py  index.rst  reference.rst
docs/_build/: .buildinfo  genindex.html  index.html  license.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js
docs/_build/.doctrees/: environment.pickle  index.doctree  license.doctree  reference.doctree
src/ultramodern_python/: __init__.py  main.py  wikipedia.py
tests/: conftest.py  test_main.py
